--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "uuid": "10194610-5445-406a-960c-91ab0c83a48c"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
+    "node": "v18.19.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
