--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "sitemap": "strapi-sitemap"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "4.19.0",
@@ -22,6 +23,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-sitemap": "^3.2.0",
     "styled-components": "5.3.3"
   },
   "author": {
