update node version

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "uuid": "10194610-5445-406a-960c-91ab0c83a48c"
   },
   "engines": {
-    "node": "v18.19.0",
+    "node": "^20.17.0 || >=22.9.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
