fix package.json version

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "uuid": "10194610-5445-406a-960c-91ab0c83a48c"
   },
   "engines": {
-    "node": "^20.17.0 || >=22.9.0",
-    "npm": ">=6.0.0"
+    "node": "^20.18.1",
+    "npm": "10.8.2"
   },
   "license": "MIT"
 }
